# DHModelCalculating

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.sh  build_deps.sh  main.cpp  package-lock.json
dhmodel/: CMakeLists.txt  dhmodel.cpp  dhmodel.h
